--- a/apps/site/src/presentation/pages/viewer/viewer.component.scss
+++ b/apps/site/src/presentation/pages/viewer/viewer.component.scss
@@ -112,6 +112,7 @@
 
     p {
       margin: 0.5rem 0 0.7rem;
+      overflow: auto; /* Create BFC to prevent floated images from rising above first line */
     }
 
     ul,
@@ -999,14 +1000,14 @@
 
   .md-asset.align-left {
     float: left;
-    margin: 0.5rem 1rem 0.8rem 0;
+    margin: 0.3rem 1rem 0.8rem 0;
     shape-outside: margin-box;
     shape-margin: 0.5rem;
   }
 
   .md-asset.align-right {
     float: right;
-    margin: 0.5rem 0 0.8rem 1rem;
+    margin: 0.3rem 0 0.8rem 1rem;
     shape-outside: margin-box;
     shape-margin: 0.5rem;
   }
